[gd_scene load_steps=11 format=3 uid="uid://0i21jaey6f7i"]

[ext_resource type="Script" path="res://Towers/TowerCore/TowerCore.gd" id="1_hlj18"]
[ext_resource type="PackedScene" uid="uid://xb4jui74wqqu" path="res://Components/ProgressBar3D/ProgressBar3D.tscn" id="2_yqitm"]
[ext_resource type="PackedScene" uid="uid://dfd5csahevltp" path="res://Towers/Projectile/Projectile.tscn" id="3_inpmn"]
[ext_resource type="Script" path="res://Towers/TowerCore/Shooting.gd" id="3_iog0w"]
[ext_resource type="Script" path="res://Towers/TowerCore/DetectionArea.gd" id="4_2w3pg"]
[ext_resource type="PackedScene" uid="uid://c6xbho67brvoo" path="res://Towers/TowerCore/DetectionVisualizer.tscn" id="4_ik3rm"]
[ext_resource type="Script" path="res://Towers/TowerCore/BuildingBlueprint.gd" id="5_0jwxp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cdx4r"]

[sub_resource type="ViewportTexture" id="ViewportTexture_jnhv3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_00dot"]

[node name="TowerCore" type="Node3D"]
script = ExtResource("1_hlj18")
is_detection_visualizer_visible = true

[node name="Shooting" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
script = ExtResource("3_iog0w")
projectile_scene = ExtResource("3_inpmn")

[node name="Detection" type="Node3D" parent="Shooting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="DetectionArea" type="Area3D" parent="Shooting/Detection"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0.0251899, 0.00919819, 0.0138192)
input_ray_pickable = false
script = ExtResource("4_2w3pg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Shooting/Detection/DetectionArea"]
shape = SubResource("CapsuleShape3D_cdx4r")

[node name="DetectionVisualizer" parent="Shooting/Detection" instance=ExtResource("4_ik3rm")]

[node name="ShootCooldown" parent="Shooting" instance=ExtResource("2_yqitm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.21989, 0)
texture = SubResource("ViewportTexture_jnhv3")

[node name="ShootCooldownTimer" type="Timer" parent="Shooting"]

[node name="BuildingBlueprint" type="Node3D" parent="."]
script = ExtResource("5_0jwxp")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 256
collision_mask = 256
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_00dot")

[node name="Visuals" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[connection signal="body_entered" from="Shooting/Detection/DetectionArea" to="Shooting/Detection/DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="Shooting/Detection/DetectionArea" to="Shooting/Detection/DetectionArea" method="_on_body_exited"]
[connection signal="timeout" from="Shooting/ShootCooldownTimer" to="Shooting" method="_on_ShootCooldownTimer_timeout"]
